integration_tests/codegen_fail/fail/union/struct_name_double_underscored.rs
use juniper::{GraphQLObject, GraphQLUnion};

#[derive(GraphQLUnion)]
#[graphql(on Human = __Character::a)]
struct __Character;

impl __Character {
    fn a(&self, _: &()) -> Option<&Human> {
        None
    }
}

#[derive(GraphQLObject)]
pub struct Human {
    id: String,
}

fn main() {}
